[project]
name = "gha-webhook"
version = "0.1.0"
description = "Webhook for GitHub Actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "UP"]
ignore = ["F401"]
